# Latam

./: .env.example  .gitignore  README.md  Untitled.ipynb  calculate_annual_loss.py  calculate_example.py  check_environment.ipynb  clean_wind_analysis.ipynb  create_notebook.py  create_xrsite_from_vortex.py  cursor_init.bat  demo_hybrid_analysis.ipynb  draft.py  environment.yaml  gis_layers_visualization.html  gis_visualization.py  klaus_original_plots_test.ipynb  list_layers.py  package-lock.json  package.json  plot_example.py  plot_shading_results.py  power_output.csv  pv_battery_lp.py  pyproject.toml  pytest.ini  pywake_plotting_examples.ipynb  requirements.txt  setup_env.bat  shading_analysis.py  shading_analysis_results.csv  shading_loss.py  site_shading_analysis.py  switch_env.bat  test_create_nordex_n164_turbine.py  test_create_xrsite_from_vortex.py  test_geopandas.py  testfunction.py  todo.md  wind_analysis_with_plots.ipynb  (+8 more)
.ipynb_checkpoints/: pywake_plotting_examples-checkpoint.ipynb  windfarm_layout-checkpoint.ipynb
Inputdata/: Electricity price 2024 grid node.csv  Nordex N164.csv  PVGIS timeseries.csv  create_xrsite_from_vortex.py
Inputdata/GISdata/: Turbine layout2.qmd  planningarea.qmd
PV_galvian/: pv_production_calculator.py  read_pvgis.py
PowerCurve_analysis/: ANALYSIS_UPDATE_SUMMARY.md  PRD.md  WIND_SHEAR_CORRECTION_IMPLEMENTATION.md  calculate_alpha.py  log.md  power_curve_analysis.md  shear_estimate.md  test_latex_equation.md  todo1.md
PowerCurve_analysis/claudedocs/: python2docx.md
PowerCurve_analysis/scripts/: PRD2.md  create_4panel_comparison.py  create_figures.py  create_per_turbine_graphs.py  create_pywake_bar_graphs.py  fix_wind_rose.py  md_to_docx.py  power_curve_comparison.py  power_curve_comparison_v2.py  power_curve_with_losses.py  test_latex_conversion.py  verify_wind_shear_correction.py
claudedocs/: BEFORE_AFTER_COMPARISON.md  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETE.md  CLEAN_PROJECT_STRUCTURE.md  DATA_DIRECTORY_STRUCTURE.md  FINAL_CLEAN_STRUCTURE.md  PATH_UPDATES_SUMMARY.md  REFACTORING_COMPLETE.md  WHAT_IS_NEW_FRAMEWORK.md  WHY_SO_MANY_FILES.md  phase_9_testing_validation_summary.md
docs/: Latam_Hybrid_Project_Report_DRAFT.md  README.md  internet references.txt
docs/Concession application/: LSD.qet
docs/Summaries/: conversation_summary.md  wind_farm_analysis_results.md
docs/extracted_text/: Robledo_EUPVSEC21.md  Wind_turbine_dynamic_shading_clean.md
energy_analysis/: README.md  __init__.py  config.py  hybrid_analysis.py  solar_pipeline.py  wind_pipeline.py
latam_hybrid/: __init__.py
latam_hybrid/Inputdata/: sector_config.py  vortex.serie.850535.6m 164m UTC-04.0 ERA5.txt  vortex.serie.850535.6m 175m UTC-04.0 ERA5.txt
latam_hybrid/claudedocs/: loss_calculation_methodology.md  sector_management_demo.py  wind_losses_demo.py  wind_losses_implementation_summary.md  wind_losses_usage_guide.md
latam_hybrid/core/: __init__.py  data_models.py  paths.py  time_alignment.py  validation.py
latam_hybrid/docs/: README.md  (+3 more)
legacy/: README.md
output/: turbine_coordinates.csv
results/: analysis_20250919_213418_summary.json  analysis_20250919_213612_summary.json
scripts/: analyze_weibull_10years.py  check_leap_years.py  check_pvgis_leap_years.py  compare_winddata.py  diagnose_sector_losses.py  gis_visualization.py  pdf_to_markdown.py  plot_turbine_production_N164.py  plot_weibull_comparison.py  prd.txt  task-complexity-report.json  test_timeseries_N164.py
simulation/: production_years.py  results.py  results_export.py  run_simulation.py  run_simulation_weibull.py
site_galvian/: create_site.py  results_export.py  site_galvian.py
tasks/: Previous_task_list.txt  Project_description.txt  new_tasks.txt  task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  tasks.json  tasks.json.bak
tests/: test_loss_calculations.py  test_sector_management.py  test_wind_losses.py
turbine_galvian/: create_turbine.py  read_windturbine.py
(+50 files in other folders)
